WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
258330
REGRESSION (
265125@main
): Crash in content process after manually killing the GPU process
https://bugs.webkit.org/show_bug.cgi?id=258330
Summary
REGRESSION (265125@main): Crash in content process after manually killing the...
Simon Fraser (smfr)
Reported
2023-06-20 16:17:29 PDT
Killing the GPU process can result in a crash in `RemoteRenderingBackendProxy::prepareBuffersForDisplay()` because the IPC error is noErrr, but we don't have sendResult.replyArguments.
Attachments
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2023-06-20 16:20:54 PDT
<
rdar://110998883
>
Simon Fraser (smfr)
Comment 2
2023-06-20 16:38:25 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/15121
EWS
Comment 3
2023-06-21 17:19:41 PDT
Committed
265382@main
(cda93437a8a8): <
https://commits.webkit.org/265382@main
> Reviewed commits have been landed. Closing PR #15121 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug