REGRESSION (265125@main): Crash in content process after manually killing the GPU process https://bugs.webkit.org/show_bug.cgi?id=258330 rdar://110998883

Reviewed by Chris Dumez.

There were a couple of code paths in IPC that could result in Connection::sendSync() returning noError, but also
no replyArguments.

First, m_shouldWaitForSyncReplies is set to `false` if the connection closes, so return error in this case.

Second, in `Connection::sendSyncMessage()`, make sure that we return an error in the case where the returned decoder
is null.

* Source/WebKit/Platform/IPC/Connection.cpp:
(IPC::Connection::sendSyncMessage):
(IPC::Connection::waitForSyncReply):

Canonical link: https://commits.webkit.org/265382@main